--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "sass": "node-sass -w client/scss/ -o client/css/ --recursive"
   },
   "author": "Luke A Firth",
   "license": "MIT",
@@ -16,7 +17,7 @@
     "express-validator": "^5.3.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.12",
+    "mongoose": "^5.5.13",
     "node-sass": "^4.12.0",
     "request": "^2.88.0"
   },
