--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-geolocated": "^2.5.0",
+    "react-google-maps": "^9.4.5",
     "react-moment": "^0.9.2",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +42,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "secure": false
 }
