--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "config": "^3.1.0",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
+    "google-maps-react": "^2.0.2",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.13",
